--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,22 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 config = "0.11"
+uuid = { version = "1.0.0", features = ["v4"] }
+chrono = "0.4.15"
+sqlx = { version = "0.6.3", default-features = false, features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+] }
 
 # Using table-like toml syntax to avoid a super-long line!
-[dependencies.sqlx]
-version = "0.6.0"
-default-features = false
-features = [
-  "runtime-actix-rustls",
-  "macros",
-  "postgres",
-  "uuid",
-  "chrono",
-  "migrate"
-]
+# [dependencies.sqlx]
+# version = "0.6.3"
+# default-features = false
+# features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
 
 [dev-dependencies]
 reqwest = "0.11"
