--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-log = "0.4"
-env_logger ="0.9"
+tracing-actix-web = "0.5"
+secrecy = { version = "0.8", features = ["serde"] }
+tracing-log = "0.1"
+tracing-bunyan-formatter = "0.3"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing = { version = "0.1", features = ["log"] }
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
@@ -28,6 +32,7 @@ sqlx = { version = "0.6.3", default-features = false, features = [
 # features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
 
 [dev-dependencies]
+once_cell = "1"
 reqwest = "0.11"
 
 # We could use any path here, but we are following the community convention.
