--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,25 +4,26 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tracing-actix-web = "0.5"
-secrecy = { version = "0.8", features = ["serde"] }
-tracing-log = "0.1"
-tracing-bunyan-formatter = "0.3"
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-tracing = { version = "0.1", features = ["log"] }
-actix-web = "4"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1", features = ["derive"] }
-config = "0.11"
-uuid = { version = "1.0.0", features = ["v4"] }
-chrono = "0.4.15"
-sqlx = { version = "0.6.3", default-features = false, features = [
+tracing-actix-web         = "0.5"
+secrecy                   = { version = "0.8", features = ["serde"] }
+tracing-log               = "0.1"
+tracing-bunyan-formatter  = "0.3"
+tracing-subscriber        = { version = "0.3", features = ["registry", "env-filter"] }
+tracing                   = { version = "0.1", features = ["log"] }
+actix-web                 = "4"
+tokio                     = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde                     = { version = "1", features = ["derive"] }
+config                    = "0.11"
+uuid                      = { version = "1.0.0", features = ["v4"] }
+chrono                    = "0.4.15"
+sqlx                      = { version = "0.6.3", default-features = false, features = [
     "runtime-tokio-rustls",
     "macros",
     "postgres",
     "uuid",
     "chrono",
     "migrate",
+    "offline"
 ] }
 
 # Using table-like toml syntax to avoid a super-long line!
@@ -33,7 +34,7 @@ sqlx = { version = "0.6.3", default-features = false, features = [
 
 [dev-dependencies]
 once_cell = "1"
-reqwest = "0.11"
+reqwest   = "0.11"
 
 # We could use any path here, but we are following the community convention.
 # We could specify a library name using the 'name' field. I f unspecified
