--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde-aux = "4"
 tracing-actix-web         = "0.5"
 secrecy                   = { version = "0.8", features = ["serde"] }
 tracing-log               = "0.1"
